feat：私密知识库空间加密处理，使用 RSA + AES-GCM 混合加密方案